src/vogar/android/DeviceDalvikVm.java: src/vogar/android/HostDalvikVm.java: bring HostDalvikVm more in line with DeviceDalvikVm, and set -Xjnigreflimit (maximum JNI global reference table size) for both. Framework apps run with this restriction, so we should test with it in place.
git-svn-id: http://vogar.googlecode.com/svn/trunk@204 aa685c63-decc-881d-cd2b-7fa72aad72e1